--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@ if("serviceWorker" in navigator){
 </div>
 
 <footer>
-<p>ที่อยู่ร้าน: ถนนโรตี อำเภออร่อย จังหวัดหิว</p>
-<p>โทร: 099-999-9999</p>
+<p>91 ถนนสีหราชเดโชชัย ตำบลทะเลชุบศร อำเภอเมือง ลพบุรี | โทร 062-248-7887</p>
 </footer>
 
 <script src="script.js"></script>
