--- a/admin.html
+++ b/admin.html
@@ -6,14 +6,14 @@
 <link rel="stylesheet" href="style.css">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#8b0000">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <script>
 if("serviceWorker" in navigator){
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
-<body onload="checkAdmin(); showAdminTab('doing')">
+<body onload="checkAdmin(); startAdminWatcher();">
 
 <!-- ⭐⭐ ต้องมี loadOrders() -->
 
