--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@ if("serviceWorker" in navigator){
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
-<body onload="checkAdmin(); startAdminWatcher();">
+<body onload="checkAdmin(); loadOrders(); startAdminWatcher();">
 
 <!-- ⭐⭐ ต้องมี loadOrders() -->
 
