--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,8 @@ if("serviceWorker" in navigator){
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
-<body onload="checkAdmin(); loadOrders(); startAdminWatcher();">
+<body onload="checkAdmin(); showAdminTab('doing'); startAdminWatcher();">
+
 
 <!-- ⭐⭐ ต้องมี loadOrders() -->
 
