--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ if("serviceWorker" in navigator){
   navigator.serviceWorker.register("service-worker.js");
 }
 </script>
-<body onload="checkLogin(); loadMenu();">
+<body onload="checkCustomer();">
 
 <header>
 <h1>เลิศรสโรตี</h1>
